tests/ui/feature-gates/issue-43106-gating-of-stable.stderr
error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:7:1
   |
LL | #![stable()]
   | ^^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:10:1
   |
LL | #[stable()]
   | ^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:14:9
   |
LL |         #![stable()]
   |         ^^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:18:5
   |
LL |     #[stable()]
   |     ^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:22:5
   |
LL |     #[stable()]
   |     ^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:26:5
   |
LL |     #[stable()]
   |     ^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:30:5
   |
LL |     #[stable()]
   |     ^^^^^^^^^^^

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0734`.
